[package]
name = "aoc_2021"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"
default-run = "aoc_2021"

[dependencies]
aoc_prelude = { path = "../crates/aoc_prelude" }
aoc_2dmap = { path = "../crates/aoc_2dmap" }
pest = "2.1.3"
pest_derive = "2.1.0"
regex = { version = "1.5", default-features = false, features = ["std", "unicode-perl"] }
deku = "0.12.5"

[[bin]]
name = "day22"
path = "src/day22/main.rs"
