[package]
name = "aoc_2021"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"
default-run = "aoc_2021"

[dependencies]
aoc_2dmap = { path = "../crates/aoc_2dmap" }
aoc_dijsktra = { path = "../crates/aoc_dijsktra" }
aoc_prelude = { path = "../crates/aoc_prelude" }
deku.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true

[[bin]]
name = "day22"
path = "src/day22/main.rs"
