[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
default-run = "aoc2021"

[[bin]]
name = "day22"
path = "src/day22/main.rs"

[dependencies]
aoc_2dmap = { path = "../aoc_2dmap" }
arrayvec = "0.7.2"
cached = "0.26.2"
deku = "0.12.5"
hashbrown = "0.11.2"
hex = "0.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
multimap = "0.8.3"
num = "0.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5"
