[package]
name = "aoc_prelude"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec.workspace = true
hashbrown.workspace = true
hex.workspace = true
itertools.workspace = true
lazy_static.workspace = true
multimap.workspace = true
num-bigint = "0.4.4"
num-integer = "0.1.46"
num-iter.workspace = true
num-traits.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
